<resources>
    <string name="app_name">Donate Life</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="usage_policy">Usage Policy</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="about_developers">About Developers</string>
    <string name="app_version">1.1.1</string>
    <string name="app_info">Info</string>
    <string name="app_copyright">2014 Blue Pandora Inc</string>
    <string name="app_version_code">Version 1.1.1</string>
    <string name="the_doctor" translatable="false">The Doctor</string>
    <string name="the_doctor_email" translatable="false">sajid.sust.cse@gmail.com</string>
    <string name="the_doctor_facebook" translatable="false">https://www.facebook.com/tumanisdevil</string>
    <string name="coder_bd" translatable="false">coder.bd</string>
    <string name="coder_bd_email" translatable="false">biswajit.sust@gmail.com</string>
    <string name="coder_bd_facebook" translatable="false">https://www.facebook.com/profile.php?id=100000043940885</string>
    <string name="emergency_text">EMERGENCY</string>
    <string name="non_emergency_text"> </string>
    <string name="emergency_char" translatable="false">E</string>
    <string name="emergency_request">EMERGENCY REQUEST</string>
    <string name="emergency_sms">SMS REQUEST</string>
    <string name="dummy_name">System</string>
    <string name="dummy_blood_group">Required:</string>
    <string name="blood_group">Blood group</string>
    <string name="total_donation">Total Donation</string>
    <string name="Ok">OK</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="refresh">refresh</string>
    <string name="refresh_notice">Pull Down to Refresh</string>
    <string name="request_server">Add to feed</string>
    <string name="request_sms">Send SMS Request</string>
    <string name="profile_details">Profile Details</string>
    <string name="profile_edit">Edit</string>
    <string name="password_field">Pass</string>
    <string name="plus">+</string>
    <string name="warning_no_mobile_number">You Must Enter a mobile number</string>
    <string name="warning_number_short">You Must Enter a valid number</string>
    <string name="warning_select_a_country">You Must select a country</string>
    <string name="warning_enter_a_password">Registered Phone.Enter Password.</string>
    <string name="warning_must_enter_a_password">You must Enter Password.</string>
    <string name="warning_must_enter_a_first_name">You must Enter your First Name.</string>
    <string name="warning_must_enter_a_last_name">You must Enter your Last Name.</string>
    <string name="warning_password_not_matched">Password Didn\'t Matched.</string>
    <string name="warning_wrong_password">Enter the right Password.</string>
    <string name="warning_remove_the_password">Remove the password for registration</string>
    <string name="register_name_info">First Last</string>
    <string name="register_name_last">Last Name</string>
    <string name="register_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="edit_password">Password for confirm edit</string>
    <string name="confirm">Confirm</string>
    <string name="registration">Register</string>
    <string name="send_feedback">Send</string>
    <string name="register_name_first">First Name</string>
    <string name="spinner_prompt">Select A Country</string>
    <string name="dummy_blood_group_ID">A+</string>
    <string name="dummy_hospital_name_ID">Dhaka Medical College</string>
    <string name="dummy_blood_amount">Amount:</string>
    <string name="dummy_blood_amount_ID">(2 Bags)</string>
    <string name="dummy_area_name_ID">Dhaka</string>
    <string name="select_area">Blood Required Area:</string>
    <string name="select_hospital">Select Your Hospital Name:</string>
    <string name="select_blood_group">Blood group:</string>
    <string name="select_amount">Amount:</string>
    <string name="area_name">District</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="full_name">Full Name</string>
    <string name="dummy_full_name">Android System</string>
    <string name="dummy_mobile_number_ID">1*********</string>
    <string name="dummy_time">16 January 1993</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_own">Delete the request</string>
    <string name="action_call">Call:</string>
    <string name="action_sms">Send SMS:</string>
    <string name="action_logout">Log Out</string>
    <string name="sample_news_feed">Sample News Feed</string>
    <string name="sample_slide_menu">Sample Slide menu</string>
    <string name="sample_slide_menu_land">Sample Slide Menu Land</string>
    <string name="sample_news_feed_land">Sample News Feed land</string>
    <string name="register_sms_one_time">Donate Life checks your mobile number to verify your registration.</string>
    <string name="register_phone_number_code_confirm">Please confirm your country code and enter your phone number</string>
    <string name="register_name_confirm">Your Full name:</string>
    <string name="register_password_confirm">Enter a Password:</string>
    <string name="district_confirm">Select where you live.</string>
    <string name="blood_group_confirm">Select your Blood Group.</string>
    <string name="blood_feed">Blood Feed</string>
    <string name="blood_request">Request Blood</string>
    <string name="profile">Profile</string>
    <string name="hospital">Hospital</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="about_us">About Us</string>
    <string name="loading">Loading&#8230;</string>
    <string name="processing">Request on Process&#8230;</string>
    <string name="timeout_error">Request not proceed.Check your Internet Connection.</string>
    <string name="no_internet">Check your Internet connection.</string>
    <string name="availability">Checking Availability&#8230;</string>
    <string name="delete_request">Delete Request</string>
    <string name="progressing">Progressing&#8230;</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config" translatable="false">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">ID is already registered.Please sign in with correct password.</string>
    <string name="gcm_registered" translatable="false">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered" translatable="false">From GCM: device successfully unregistered!</string>
    <string name="gcm_message" translatable="false">From GCM: you got message!</string>
    <string name="gcm_error" translatable="false">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error" translatable="false">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted" translatable="false">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering" translatable="false">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered" translatable="false">From Demo Server: successfully added device!</string>
    <string name="server_unregistered" translatable="false">From Demo Server: successfully removed device!</string>
    <string name="server_register_error" translatable="false">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error" translatable="false">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="pref_request_feed">Feed Option and Filtering</string>
    <string name="pref_language">Language Settings</string>
    <string name="pref_title_app_language">Bangla Language</string>
    <string name="pref_summary_app_language">Switch to Bangla</string>
    <string name="pref_notification">Notification Settings</string>
    <string name="pref_key_feed_show_limit">%d request feeds at a time</string>
    <string name="pref_title_feed_show">Feed Limit</string>
    <string name="pref_title_feed_district_filter">District Filtering</string>
    <string name="pref_title_feed_blood_group_filter">Blood Group Filtering</string>
    <string name="pref_title_notification_receive_filter">Notifications</string>
    <string name="pref_title_notification_vibration">Notification Vibration</string>
    <string name="pref_title_notification_ringtone">Notification Tone</string>
    <string name="pref_feed_district_filter">Filter the blood feed by own District</string>
    <string name="pref_feed_blood_group_filter">Filter the blood feed by own Blood Group</string>
    <string name="pref_notification_receive_filter">Play a tone and vibrate to notify new Blood Notification</string>
    <string name="pref_notification_vibration">Vibrate to notify new Blood Notification</string>
    <string name="pref_notification_ringtone">Notification sound</string>
    <string name="zero_donation_record">No Donation Record Found</string>
    <string name="one_donation_record">one Time</string>
    <string name="other_donation_record">%d Times</string>
    <string name="zero_bag_request"> </string>
    <string name="one_bag_request">(one Bag)</string>
    <string name="other_bag_request">(%d Bags)</string>
    <string name="zero_donor_title">No donor available</string>
    <string name="one_donor_title">one donor available</string>
    <string name="other_donor_title">Total %d donors available</string>
    <string name="sms_body" translatable="false">\"!!Please Help!!\n Need (one Bag) A+ in AD-DIN WOMEN\'S MEDICAL COLLEGE. \n -Donate Life\"</string>
    <string name="donor_zero_grammar_correct">No donor available</string>
    <string name="donor_zero_grammar_error">Total 0 donors available</string>
    <string name="zero_grammar_error">0 Times</string>
    <string name="about_version_build_code">Version 1.1.1 | build 20141213</string>
    <string name="about_usage_policy">Donate Life is for personal and non-commercial use only.</string>
    <string name="about_legal_license">legal information about licenses</string>
    <string name="name_and_contact">Name and contact</string>
    <string name="feedback_thank_you">Thank you for your feedback</string>
    <string name="alert">Alert!</string>
    <string name="log_out_message">Logging out&#8230;</string>
    <string name="exit_notice">Press Back again to Exit</string>
    <string name="info">Info</string>
    <string name="unknown_server_error">Something has gone wrong&#8230;   Try again in a few minutes.</string>
    <string name="no_update">Feed up to Date.</string>
    <string name="own_request_delete">Your own request has been deleted.</string>
    <string name="no_donor_availibility">Sorry!No donor is available at this moment</string>
    <string name="donation_record_delete">Donation Record has been deleted</string>
    <string name="no_hospital_tag">Sorry No Hospital Name is available for this City</string>
    <string name="sms_alert">Are you sure about the sms request?</string>
    <string name="request_alert">Are you sure about sending the request?</string>
    <string name="send_sms_to">Send SMS to</string>
    <string name="person">persons</string>
    <string name="cost_alert">N.B.: This may cost you money.</string>
    <string name="number">Number</string>
    <string name="sms_body_title">SMS BODY</string>
</resources>