<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory
        android:key="pref_key_language"
        android:title="@string/pref_language">
        <com.project.bluepandora.donatelife.preferences.CustomCheckBoxPreference
            android:defaultValue="false"
            android:key="pref_app_language"
            android:summary="@string/pref_summary_app_language"
            android:title="@string/pref_title_app_language" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_feed_settings"
        android:title="@string/pref_request_feed">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_filter_district"
            android:summary="@string/pref_feed_district_filter"
            android:title="@string/pref_title_feed_district_filter" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_filter_blood_group"
            android:summary="@string/pref_feed_blood_group_filter"
            android:title="@string/pref_title_feed_blood_group_filter" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_notification_settings"
        android:title="@string/pref_notification">
        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_notification_receive"
            android:summary="@string/pref_notification_receive_filter"
            android:title="@string/pref_title_notification_receive_filter" />
        <com.project.bluepandora.donatelife.preferences.NotificationSoundPreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="pref_notification_receive"
            android:key="pref_notification_ringtone"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:summary="@string/pref_notification_ringtone"
            android:title="@string/pref_title_notification_ringtone" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="pref_notification_receive"
            android:key="pref_notification_vibration"
            android:summary="@string/pref_notification_vibration"
            android:title="@string/pref_title_notification_vibration" />
    </PreferenceCategory>
</PreferenceScreen>